--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -62,7 +62,7 @@
     "    \n",
     "# join the file path and roots with the subdirectories using glob\n",
     "    file_path_list = glob.glob(os.path.join(root,'*'))\n",
-    "    # print(file_path_list)"
+    "    print(file_path_list)"
    ]
   },
   {
@@ -92,11 +92,11 @@
     "        \n",
     " # extracting each data row one by one and append it        \n",
     "        for line in csvreader:\n",
-    "            #print(line)\n",
+    "            # print(line)\n",
     "            full_data_rows_list.append(line) \n",
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
-    "# print(len(full_data_rows_list))\n",
+    "print(len(full_data_rows_list))\n",
     "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
     "# print(full_data_rows_list)\n",
     "\n",
@@ -229,13 +229,6 @@
    "source": [
     "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -468,13 +461,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -490,25 +476,11 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -523,6 +495,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cddf51aaaecfdf363396358de546c6d4fd4e444aa6053d8c64d5e16e8f94835b"
+   }
   }
  },
  "nbformat": 4,
